--- a/templates/game_control.html
+++ b/templates/game_control.html
@@ -36,7 +36,7 @@
       <button id="calculate_results" class="btn btn-block btn-danger">End Game / Calculate Results</button><br>
     </div>
 
-    <div class="student-results" id="show_students_in_room"></div>
+    <div class="student-results" id="show_students_in_room">Students Playing:</div>
 
     <hr>
 
