--- a/templates/layout.html
+++ b/templates/layout.html
@@ -38,7 +38,7 @@
         <a href="{{ url_for('logout') }}">logout</a>
         {% endif %}
         {% if session.student_id %}
-        <button type="button" class="btn btn-link" id="student_logout">logout(S)</button>
+        <a href="#" id="student_logout">logout</a>
         {% endif %}
 
 
