--- a/templates/teacher.html
+++ b/templates/teacher.html
@@ -10,7 +10,7 @@
 
   <hr>
   {% if games %}
-    <h4>Choose a game 222:</h4>
+    <h4>Choose a game:</h4>
     <ul>
         {% for game in games %}
           <li>
