--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
 
         <p>I've been teaching since, well, before the internet.  Okay, maybe not that long ago.  But while I do love all the new technology that's out there to help teachers make learning easier, and more exciting, and I use them myself, I also know that technology is just a tool.  It's not going to turn a bad teacher into a good one.  And a good teacher will be good just with the use of a chalkboard and some chalk.  In that vein I tried to come up with a quiz game to use with your classes, perhaps when you review a unit, without many of the bells and whistles that others online quizzes come with, and that is almost as flexible as a chalkboard.</p>
 
-        <p>If you are a beginning teacher, though, check out <a href="https://www.plickers">Plickers</a>, a free, easy to use and powerful student response system.  Also try <a href="https://kahoot.com">Kahoot</a>, a quiz style learning app that I've seen first hand in my own school, generate the excitement they claim on their promotional videos.</p>
+        <p>If you are a beginning teacher, though, check out <a href="https://www.plickers.com">Plickers</a>, a free, easy to use and powerful student response system.  Also try <a href="https://kahoot.com">Kahoot</a>, a quiz style learning app that I've seen first hand in my own school, generate the excitement they claim on their promotional videos.</p>
 
         <p>If you're still interested in a less robust, more boring version than these, then, please continue by choosing your role.</p>
 
