--- a/templates/index.html
+++ b/templates/index.html
@@ -28,11 +28,13 @@
 
       <div class="rest">
 
-        <p>I've been teaching since, well, before the internet.  Okay, maybe not that long ago.  But while I do love all the new technology that's out there to help teachers make learning easier, and more exciting, and I use them myself, I also know that technology is just a tool.  It's not going to turn a bad teacher into a good one.  And a good teacher will be good just with the use of a chalkboard and some chalk.  In that vein I tried to come up with a quiz game to use with your classes, perhaps when you review a unit, without many of the bells and whistles that others online quizzes come with, and that is almost as flexible as a chalkboard.</p>
+        <div class="intro deleteformobile">
+          <p>&nbsp;&nbsp;&nbsp;&nbsp;I've been teaching since, well, before the internet.  Okay, maybe not that long ago.  But while I do love all the new technology that's out there to help teachers make learning easier, and more exciting, and I use them myself, I also know that technology is just a tool.  It's not going to turn a bad teacher into a good one.  And a good teacher will be good just with the use of a chalkboard and some chalk.  In that vein I tried to come up with a quiz game to use with your classes, perhaps when you review a unit, without many of the bells and whistles that others online quizzes come with, and that is almost as flexible as a chalkboard.</p>
 
-        <p>If you are a beginning teacher, though, check out <a href="https://www.plickers.com">Plickers</a>, a free, easy to use and powerful student response system.  Also try <a href="https://kahoot.com">Kahoot</a>, a quiz style learning app that I've seen first hand in my own school, generate the excitement they claim on their promotional videos.</p>
+          <p>&nbsp;&nbsp;&nbsp;&nbsp;If you are a beginning teacher, though, check out <a href="https://www.plickers.com">Plickers</a>, a free, easy to use and powerful student response system.  Also try <a href="https://kahoot.com">Kahoot</a>, a free, quiz style learning app that I've seen first hand in my own school, generate the excitement they claim on their promotional videos.  If you're looking for something that you can use to create more formal online tests, check out <a href="https://jupitered.com/">Jupiter Ed</a>, which you can use to create online gradebooks as well.  It's not free, but cheap, and well worth the value. If you're still interested in a less robust, more boring version than these, then, please continue by choosing your role.</p>
+        </div>
 
-        <p>If you're still interested in a less robust, more boring version than these, then, please continue by choosing your role.</p>
+        <h2 class="iama">Choose your role.  I am a</h2>
 
         <div class="roles">
           <a href="{{ url_for('student') }}"><div class="role-box"><img class="role-student" src="{{url_for('static', filename='student.svg')}}" /><br>Student</div></a>
