--- a/templates/login.html
+++ b/templates/login.html
@@ -6,7 +6,7 @@
 
 {% block body %}
 
-  <div class="flex-layout">
+  <div class="flex-layout intro">
     <div>
       <form action="login" method="post">
         <div class="form-group user-form">
