--- a/templates/student.html
+++ b/templates/student.html
@@ -9,19 +9,23 @@
 <script type="text/javascript" src="/static/student.js"></script>
 <link rel="stylesheet" href="/static/typeahead.css">
 
-<form action="{{ url_for('add_new_student') }}" method="post">
+<div class="intro">
+  <form action="{{ url_for('add_new_student') }}" method="post">
 
-  <div  id="teacher_search" class="form-group form-inline">
-    <input class="typeahead" type="text" name="teacher" placeholder="Search for your teacher" autocomplete="off" id="teacher_selected">&nbsp;&nbsp;
-    <button class="btn btn-info btn-lg" type="button" id="select_teacher">Select</button>
-  </div>
+    <div id="teacher_search" class="form-group form-inline">
+      <input class="typeahead" type="text" name="teacher" placeholder="Search for your teacher" autocomplete="off" id="teacher_selected">&nbsp;&nbsp;
+      <button class="btn btn-info btn-lg" type="button" id="select_teacher">Select</button>
+    </div>
 
-  <div id="student_name" class="form-group form-inline" style="visibility:hidden">
-    <input class="typeahead" type="text" class="form-control" name="student" placeholder="Choose a username or team name" id="student_chosen_name" required>&nbsp;&nbsp;
-    <button class="btn btn-info btn-lg" type="submit" id="choose_name">Next</button>
-  </div>
+    <div id="student_name" class="form-group form-inline" style="visibility:hidden">
+      <input class="typeahead" type="text" class="form-control" name="student" placeholder="Choose a username or team name" id="student_chosen_name" required>&nbsp;&nbsp;
+      <button class="btn btn-info btn-lg" type="submit" id="choose_name">Next</button>
+    </div>
 
-</form>
+  </form>
+</div>
+
+
 
 <p id="error_message" class="error"></p>
 
