--- a/templates/teacher.html
+++ b/templates/teacher.html
@@ -15,10 +15,10 @@
         {% for game in games %}
           <li>
             <form class="form-inline" action="{{ url_for('game_control', teacher=teacher.username, game_name=game.game_name) }}" method="post">
-              <span><strong>{{ game.game_name }}:&nbsp;&nbsp;</strong></span>
-              <button class="btn btn-link" type="submit" name="action" value="play" id="clear_all">[<u>play from beginning</u>]</button>
-              <button class="btn btn-link" type="submit" name="action" value="resume">[<u>resume</u>]</button>
-              <a href="/edit_game/{{ game.game_id }}">[edit]</a>
+            <strong>{{ game.game_name }}: </strong>
+              <button class="btn btn-link" type="submit" name="action" value="play" id="clear_all">[<u>start</u>]</button>
+              <button class="btn btn-link" type="submit" name="action" value="resume">[<u>resume</u>]&nbsp;&nbsp;</button>
+              <a href="/edit_game/{{ game.game_id }}">[edit]</a>&nbsp;&nbsp;
               <button class="btn btn-link" type="submit" name="action" value="delete">[<u>delete</u>]</button>
             </form>
           </li>
